[gd_scene load_steps=2 format=3 uid="uid://galaxy_map"]

[ext_resource type="Script" path="res://scripts/galaxy_map.gd" id="1_galaxy"]

[node name="GalaxyMap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_galaxy")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.08, 0.08, 0.12, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HUD" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="CreditsLabel" type="Label" parent="MarginContainer/VBoxContainer/HUD"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Credits: 1,000"

[node name="FuelLabel" type="Label" parent="MarginContainer/VBoxContainer/HUD"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Fuel: 50/50"

[node name="CargoLabel" type="Label" parent="MarginContainer/VBoxContainer/HUD"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Cargo: 0/100"

[node name="DayLabel" type="Label" parent="MarginContainer/VBoxContainer/HUD"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Day: 1"

[node name="LocationLabel" type="Label" parent="MarginContainer/VBoxContainer/HUD"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.3, 0.7, 1, 1)
text = "Location: Earth"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MainContent" type="HSplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 300

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="PlanetsLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Destinations"

[node name="PlanetList" type="ItemList" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 16
allow_reselect = true
auto_height = false

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 15

[node name="PlanetName" type="Label" parent="MarginContainer/VBoxContainer/MainContent/RightPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Select a Destination"

[node name="PlanetDescription" type="Label" parent="MarginContainer/VBoxContainer/MainContent/RightPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
text = "Choose a planet from the list to see details."
autowrap_mode = 2

[node name="TravelInfo" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="DistanceLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/TravelInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Distance: --"

[node name="FuelCostLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/TravelInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Fuel Cost: --"

[node name="TravelTimeLabel" type="Label" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/TravelInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Travel Time: -- days"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/MainContent/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TravelButton" type="Button" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/ButtonRow"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
disabled = true
text = "Travel"

[node name="MarketButton" type="Button" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/ButtonRow"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Market"

[node name="ShipyardButton" type="Button" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/ButtonRow"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Shipyard"

[node name="NewsButton" type="Button" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/ButtonRow"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "News"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/ButtonRow"]
custom_minimum_size = Vector2(100, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Save"

[node name="MessageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.4, 0.8, 0.4, 1)
text = ""
horizontal_alignment = 1

[connection signal="item_selected" from="MarginContainer/VBoxContainer/MainContent/LeftPanel/PlanetList" to="." method="_on_planet_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainContent/RightPanel/ButtonRow/TravelButton" to="." method="_on_travel_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainContent/RightPanel/ButtonRow/MarketButton" to="." method="_on_market_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainContent/RightPanel/ButtonRow/ShipyardButton" to="." method="_on_shipyard_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainContent/RightPanel/ButtonRow/NewsButton" to="." method="_on_news_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainContent/RightPanel/ButtonRow/SaveButton" to="." method="_on_save_pressed"]
